# CG_VTK_learn

./: 03Avatar.py  com.pipe.py  contourquadric_0319.py  hand.py  pipe_0319.py  quadricVisualization_0319.py
.conda/conda-meta/: history  libffi-3.4.4-hca03da5_1.json  ncurses-6.4-h313beb8_0.json  openssl-3.0.16-h02f6b3c_0.json  pip-25.0-py311hca03da5_0.json  python-3.11.11-hb885b13_0.json  readline-8.2-h1a28f6b_0.json  setuptools-75.8.0-py311hca03da5_0.json  sqlite-3.45.3-h80987f9_0.json  tk-8.6.14-h6ba3021_0.json  wheel-0.45.1-py311hca03da5_0.json  xz-5.6.4-h80987f9_1.json  zlib-1.2.13-h18a0788_1.json
.conda/etc/: aau_token
.conda/lib/: libcrypto.3.dylib  libncursesw.6.dylib  libtcl8.6.dylib  libtinfow.6.dylib  tclConfig.sh  tkConfig.sh
.conda/lib/itcl4.2.4/: itclConfig.sh
.conda/lib/pkgconfig/: formw.pc  history.pc  libcrypto.pc  libffi.pc  liblzma.pc  libssl.pc  menuw.pc  ncurses++w.pc  ncursesw.pc  openssl.pc  panelw.pc  python-3.11-embed.pc  python-3.11.pc  readline.pc  sqlite3.pc  tcl.pc  tinfow.pc  tk.pc  zlib.pc
.conda/lib/python3.11/: _sysconfigdata__darwin_darwin.py  _sysconfigdata__darwin_darwin.py.orig  _sysconfigdata_arm64_apple_darwin20_0_0.py
.conda/lib/python3.11/config-3.11-darwin/: Makefile
.conda/lib/tdbc1.1.7/: tdbcConfig.sh
.conda/share/terminfo/61/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
.conda/share/terminfo/63/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
.conda/share/terminfo/64/: ddr  dec-vt220
.conda/share/terminfo/65/: emu-220
.conda/share/terminfo/68/: hpex  (+8 more)
pipe/: 2.cpp  CMakeLists.txt
(+125 files in other folders)
